--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
-h1 {
-    color: red;
+*, *::before, *::after {
+    /* box sizing is not a property that can be inherited from its parent so must be mentioned explicitly */
+    box-sizing: border-box;
 }
