--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,12 @@
 *, *::before, *::after {
     /* box sizing is not a property that can be inherited from its parent so must be mentioned explicitly */
     box-sizing: border-box;
-    /* font-family:  */
-    /* font-weight: normal; */
+    /* font-family:  STYLE CHOICE*/
+    /* font-weight: normal;  STYLE CHOICE */
 }
 
 body {
     padding: 0;
     margin: 0;
+    /* background: */
 }
