--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,13 @@ body {
 
 .calculator-grid {
     display: grid;
+    /* center calculator within grid */
     justify-content: center;
     align-items: center;
+    /* fill 100% of the veiwport height */
     min-height: 100vh;
+    /* 4 columns of 100px width */
+    grid-template-columns: repeat(4, 100px);
+    /* auto to catch overflow of digits 120px minimum and auto maximum*/
+    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
 }
